# learnCmake

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  learn  main.c  mainStat.c
math/: math.c
math/include/: mymath.h
math/interface/: math_if.h
stat/: stat.c
stat/include/: stat.h
